<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/SetTag">

        <EditTextPreference
            android:defaultValue="1"
            android:key="Pref_Key_Tag_Title"
            android:title="@string/Title" />
        <EditTextPreference
            android:key="Pref_Key_Tag_Artist"
            android:title="@string/Artist" />
        <EditTextPreference
            android:key="Pref_Key_Tag_Album"
            android:title="@string/Album" />
        <EditTextPreference
            android:key="Pref_Key_Tag_Genre"
            android:title="@string/Genre" />
        <EditTextPreference
            android:key="Pref_Key_Tag_AlbumArtist"
            android:title="@string/AlbumArtist" />
        <EditTextPreference
            android:key="Pref_Key_Tag_Year"
            android:title="@string/Year" />
    </PreferenceCategory>
</PreferenceScreen>
